--- a/app/src/main/res/layout/activity_crud_reglas.xml
+++ b/app/src/main/res/layout/activity_crud_reglas.xml
@@ -23,13 +23,17 @@
             android:id="@+id/button6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Modificar" />
+            android:text="Modificar"
+            android:backgroundTint="#ADD8E6"
+            android:textColor="#000000"/>
 
         <Button
             android:id="@+id/button7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Volver" />
+            android:text="Volver"
+            android:backgroundTint="#ADD8E6"
+            android:textColor="#000000"/>
     </LinearLayout>
 
     <LinearLayout
@@ -110,13 +114,17 @@
             android:id="@+id/button6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Agregar" />
+            android:text="Agregar"
+            android:backgroundTint="#ADD8E6"
+            android:textColor="#000000"/>
 
         <Button
             android:id="@+id/button7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Eliminar" />
+            android:text="Eliminar"
+            android:backgroundTint="#ADD8E6"
+            android:textColor="#000000"/>
     </LinearLayout>
 
     <Button
@@ -129,7 +137,9 @@
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.884" />
+        app:layout_constraintVertical_bias="0.884"
+        android:backgroundTint="#ADD8E6"
+        android:textColor="#000000"/>
 
     <EditText
         android:id="@+id/editTextText6"
