--- a/app/src/main/res/layout/activity_crud_reglas.xml
+++ b/app/src/main/res/layout/activity_crud_reglas.xml
@@ -14,29 +14,29 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.931"
+        app:layout_constraintHorizontal_bias="0.928"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.718">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btnModificar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#ADD8E6"
             android:text="Modificar"
-            android:backgroundTint="#ADD8E6"
-            android:textColor="#000000"/>
+            android:textColor="#000000" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/btnVolver"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Volver"
             android:backgroundTint="#ADD8E6"
-            android:textColor="#000000"/>
+            android:text="Volver"
+            android:textColor="#000000" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayoutEditTexts"
         android:layout_width="404dp"
         android:layout_height="266dp"
         android:orientation="vertical"
@@ -100,46 +100,46 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayoutBotones"
         android:layout_width="191dp"
         android:layout_height="117dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.723">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btnAgregar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#ADD8E6"
             android:text="Agregar"
-            android:backgroundTint="#ADD8E6"
-            android:textColor="#000000"/>
+            android:textColor="#000000" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/btnEliminar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Eliminar"
             android:backgroundTint="#ADD8E6"
-            android:textColor="#000000"/>
+            android:text="Eliminar"
+            android:textColor="#000000" />
     </LinearLayout>
 
     <Button
         android:id="@+id/button10"
         android:layout_width="169dp"
         android:layout_height="48dp"
+        android:backgroundTint="#ADD8E6"
         android:text="Buscar"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.884"
-        android:backgroundTint="#ADD8E6"
-        android:textColor="#000000"/>
+        app:layout_constraintVertical_bias="0.652" />
 
     <EditText
         android:id="@+id/editTextText6"
@@ -150,9 +150,20 @@
         android:text="Buscar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.985"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.884" />
+        app:layout_constraintVertical_bias="0.652" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerReglas"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/linearLayoutBotones"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="8dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
