--- a/app/src/main/res/layout/fragment_crud_tiendas.xml
+++ b/app/src/main/res/layout/fragment_crud_tiendas.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF8E1"
-    tools:context=".Vista.CrudTiendasFragmen">
+    tools:context=".Vista.CrudTiendasFragment">
     <!-- Título -->
     <TextView
         android:id="@+id/textViewTitulo"
