--- a/app/src/main/res/layout/item_regla.xml
+++ b/app/src/main/res/layout/item_regla.xml
@@ -36,6 +36,15 @@
             android:text="Otros: "
             android:layout_marginTop="4dp"/>
 
+        <Button
+            android:id="@+id/btnGenerarQR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Generar QR"
+            android:layout_marginTop="8dp"/>
+
+
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
