--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,18 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
+    <!-- Base application theme -->
     <style name="Base.Theme.ProyectoAndroid" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- Fondo -->
+        <item name="android:windowBackground">@color/background_light</item>
+
+        <!-- Colores principales -->
+        <item name="colorPrimary">@color/golden</item>
+        <item name="colorOnPrimary">@color/brown_dark</item>
+
+        <!-- Texto -->
+        <item name="android:textColorPrimary">@color/brown_dark</item>
+        <item name="android:textColorSecondary">@color/brown_dark</item>
+        <item name="android:textColorHint">@color/brown_dark</item>
     </style>
+
+    <style name="Theme.ProyectoAndroid" parent="Base.Theme.ProyectoAndroid" />
 </resources>
