--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="brown_dark">#3E2723</color>
+    <color name="golden">#D9A066</color>
+    <color name="background_light">#FFF8E1</color>
+
 </resources>
