--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <color name="brown_dark">#3E2723</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+
+    <!-- Colores personalizados de la cafetería -->
+    <color name="fondo_app">#F5F0E6</color>
+    <color name="brown_dark">#6B4C3B</color>
     <color name="golden">#D9A066</color>
     <color name="background_light">#FFF8E1</color>
+
+    <!-- Colores definidos para los textos y botones -->
+    <color name="texto_principal">#3E2723</color>
+    <color name="texto_secundario">#A0522D</color>
+    <color name="boton_agregar">#228B22</color>
+    <color name="boton_eliminar">#B22222</color>
+    <color name="boton_volver">#A0522D</color>
 
 </resources>
